[package]
name = "emulator"
version = "0.1.0"
authors = ["Owen Sullivan <multiojuice@gmail.com>", "Zachary Johnson <zachjohnson1900@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

sdl2 = "0.34"